Correctly align options

--- a/assets/js/base/components/country-input/style.scss
+++ b/assets/js/base/components/country-input/style.scss
@@ -30,4 +30,8 @@
 	.components-custom-select-control__menu {
 		margin: 0;
 	}
+
+	.components-custom-select-control__item {
+		padding-left: $gap;
+	}
 }
